==> MikroElektronika/mikrosdk_v2/sdk/targets_org2/pic_8bit/mikroe/pic18/src/i2c/implementation_2/hal_ll_i2c_master.c <==
#include "hal_ll_pps.h"
#include "hal_ll_gpio.h"
#include "hal_ll_odcon_map.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#define hal_ll_i2c_get_module_state_address ((hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((const hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define hal_ll_pin(port_name) (port_name & HAL_LL_NIBBLE_LOW_8BIT)
#define hal_ll_port(port_name) ((port_name & HAL_LL_NIBBLE_HIGH_8BIT) >> 4)
#define HAL_LL_I2C_MASTER_SPEED_100K 100000UL
#define HAL_LL_I2C_MASTER_MFINTOSC_CLK_SOURCE 0x3
#define HAL_LL_I2C_MASTER_CLEAR_CONDITION_BITS_MASK ((1U << HAL_LL_I2C_MASTER_PCIE_BIT) | \
                                                    (1U << HAL_LL_I2C_MASTER_RSCIE_BIT) | \
                                                    (1U << HAL_LL_I2C_MASTER_SCIE_BIT))
#define HAL_LL_I2C_MASTER_START_RESTART_BITS_MASK   ((1U << HAL_LL_I2C_MASTER_RSCIE_BIT) | \
                                                    (1U << HAL_LL_I2C_MASTER_SCIE_BIT))
#define HAL_LL_I2C1_MODULE_BIT 0
#define HAL_LL_I2C2_MODULE_BIT 1

void hal_ll_i2c_master_close( handle_t *handle ) {
    low_level_handle = hal_ll_i2c_get_handle;
    hal_ll_i2c_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_i2c_get_module_state_address);

    if( low_level_handle->hal_ll_i2c_master_handle != NULL ) {
        // Used only for chips which have I2C PPS pins
        #if HAL_LL_I2C_PPS_ENABLED == true
        hal_ll_i2c_master_set_module_power(hal_ll_i2c_hw_specifics_map_local, true);
        hal_ll_pps_set_state(hal_ll_i2c_hw_specifics_map_local, false);
        #endif
        hal_ll_i2c_master_set_module_power(hal_ll_i2c_hw_specifics_map_local, false);

        low_level_handle->hal_ll_i2c_master_handle = NULL;
        low_level_handle->hal_drv_i2c_master_handle = NULL;
        low_level_handle->init_ll_state = false;

        hal_ll_i2c_hw_specifics_map_local->address = 0;
        hal_ll_i2c_hw_specifics_map_local->timeout = HAL_LL_I2C_DEFAULT_PASS_COUNT;
        hal_ll_i2c_hw_specifics_map_local->speed = HAL_LL_I2C_MASTER_SPEED_100K;

        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_pps = 0;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_pps = 0;
    }
}

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *read_data_buf, size_t len_read_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    size_t transfer_counter = NULL;
    uint8_t status = NULL;
    uint16_t time_counter = map->timeout;

    if( !check_reg_bit( hal_ll_hw_reg->i2c_con0_reg_addr, HAL_LL_I2C_MASTER_MDR_BIT ) ) {
        while ( !hal_ll_i2c_master_is_idle( map->base ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
                }
        }
    }

    write_reg( hal_ll_hw_reg->i2c_cnt_reg_addr, len_read_data );
    write_reg( hal_ll_hw_reg->i2c_adb1_reg_addr, ( map->address << 1 ) + 1 );
    status = hal_ll_i2c_master_start( map );
    if ( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    time_counter = map->timeout;
    while ( !( hal_ll_hw_reg->i2c_pir_reg_addr, HAL_LL_I2C_MASTER_START_RESTART_BITS_MASK ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
    }

    clear_reg_bits( hal_ll_hw_reg->i2c_pir_reg_addr, HAL_LL_I2C_MASTER_START_RESTART_BITS_MASK );
    if( mode == HAL_LL_I2C_MASTER_WRITE_THEN_READ ) {
        /**
         * @note When R/W = 0, the input sample acquisition period starts
         * on the falling edge of SCL once the C0 bit of the command
         * byte has been latched, and ends when a Stop or
         * repeated Start condition has been issued.
         **/
        #ifdef __TFT_RESISTIVE_TSC2003__
        Delay_1ms();
        #endif
        hal_ll_i2c_master_restart( map->base );
    } else {
        hal_ll_i2c_master_stop( map->base );
    }

    for( transfer_counter = 0; transfer_counter < len_read_data; transfer_counter++) {
        time_counter = map->timeout;
        while ( !check_reg_bit( hal_ll_hw_reg->i2c_stat1_reg_addr, HAL_LL_I2C_MASTER_RXBF_BIT ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_READ;
            }
        }
        read_data_buf[ transfer_counter ] = read_reg(hal_ll_hw_reg->i2c_rxb_reg_addr);
    }

    hal_ll_i2c_master_stop( map->base );

    time_counter = map->timeout;
    clear_reg_bit( hal_ll_hw_reg->i2c_pir_reg_addr, HAL_LL_I2C_MASTER_STOP_FLAG_BIT );

    while ( !( check_reg_bit( hal_ll_hw_reg->i2c_err_reg_addr, HAL_LL_I2C_MASTER_NACK_DETECT_BIT ) ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_READ;
        }
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map, uint8_t *write_data_buf, size_t len_write_data, hal_ll_i2c_master_end_mode_t mode ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;
    uint8_t status = NULL;
    size_t transfer_counter = NULL;

    if( !check_reg_bit( hal_ll_hw_reg->i2c_con0_reg_addr, HAL_LL_I2C_MASTER_MDR_BIT ) ) {
        while ( !hal_ll_i2c_master_is_idle( map->base ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
                }
        }
    }

    write_reg( hal_ll_hw_reg->i2c_cnt_reg_addr, len_write_data );
    write_reg( hal_ll_hw_reg->i2c_adb1_reg_addr, ( map->address << 1 ) );
    status = hal_ll_i2c_master_start( map );
    if ( status != HAL_LL_I2C_MASTER_SUCCESS ) {
        return status;
    }

    clear_reg_bits( hal_ll_hw_reg->i2c_pir_reg_addr, HAL_LL_I2C_MASTER_START_RESTART_BITS_MASK );

    if ( mode == HAL_LL_I2C_MASTER_WRITE_THEN_READ ) {
        hal_ll_i2c_master_restart( map->base );
    } else {
        hal_ll_i2c_master_stop( map->base );
    }

    for( transfer_counter = 0; transfer_counter < len_write_data; transfer_counter++){
        write_reg( hal_ll_hw_reg->i2c_txb_reg_addr, write_data_buf[ transfer_counter ] );

        time_counter = map->timeout;
        while ( !check_reg_bit( hal_ll_hw_reg->i2c_stat1_reg_addr, HAL_LL_I2C_MASTER_TXBE_BIT ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
                }
        }
    }

    time_counter = map->timeout;
    if ( mode != HAL_LL_I2C_MASTER_WRITE_THEN_READ ) {
        while ( !( check_reg_bit( hal_ll_hw_reg->i2c_pir_reg_addr, HAL_LL_I2C_MASTER_STOP_FLAG_BIT ) ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
                }
        }
        clear_reg_bit( hal_ll_hw_reg->i2c_pir_reg_addr, HAL_LL_I2C_MASTER_STOP_FLAG_BIT );
    } else {
        while ( !check_reg_bit( hal_ll_hw_reg->i2c_con0_reg_addr, HAL_LL_I2C_MASTER_MDR_BIT ) ) {
            if ( map->timeout ) {
                if ( !time_counter-- )
                    return HAL_LL_I2C_MASTER_TIMEOUT_WRITE;
            }
        }
    }

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_hw_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    const hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct(map->base);
    uint16_t time_counter = map->timeout;

    // Enable NACK detect interrupts.
    set_reg_bit( hal_ll_hw_reg->i2c_err_reg_addr, HAL_LL_I2C_MASTER_NACK_ENABLE_DETECT_BIT );

    set_reg_bit( HAL_LL_OSCEN_ADDRESS, HAL_LL_OSCEN_MFOEN_BIT );
    while ( !check_reg_bit( HAL_LL_OSCSTAT_ADDRESS, HAL_LL_OSCSTAT_MFOR_BIT ) ) {
        if ( map->timeout ) {
            if ( !time_counter-- )
                return HAL_LL_I2C_MASTER_TIMEOUT_INIT;
        }
    }

    set_reg_bit( hal_ll_hw_reg->i2c_con0_reg_addr, HAL_LL_I2C_MASTER_MODE_BIT );                  // MODE, master mode 7-bit address
    set_reg_bit( hal_ll_hw_reg->i2c_con1_reg_addr, HAL_LL_I2C_MASTER_ACKCNT_BIT );                // ACKCNT

    clear_reg( hal_ll_hw_reg->i2c_con2_reg_addr );                                                // reset CON2, FME=0 => FSCL = FCLK/5 (100kHz)

    write_reg( hal_ll_hw_reg->i2c_clk_reg_addr, HAL_LL_I2C_MASTER_MFINTOSC_CLK_SOURCE );          // Fclk = MFINTOSC (500 kHz)
    write_reg( hal_ll_hw_reg->i2c_pie_reg_addr, HAL_LL_I2C_MASTER_CLEAR_CONDITION_BITS_MASK );    // Enable : Stop, Restart and Start Interrupt Flags

    set_reg_bit( hal_ll_hw_reg->i2c_con0_reg_addr, HAL_LL_I2C_MASTER_MODULE_ENABLE_BIT );         // Enable module

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static hal_ll_err_t hal_ll_i2c_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_master_set_module_power( map, true );

    hal_ll_i2c_hw_ansel_set( map );

    hal_ll_i2c_hw_odcon_set( map );

    return hal_ll_i2c_hw_init( map );
}
