==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/renesas/src/i2c/implementation_1/hal_ll_i2c_master.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_i2c_master.h"
#include "hal_ll_i2c_pin_map.h"
#include "hal_ll_mstpcr.h"
#include "delays.h"
#include "mcu.h" // TODO Esma
#define hal_ll_i2c_get_module_state_address ((hal_ll_i2c_master_handle_register_t *)*handle)
#define hal_ll_i2c_get_handle (hal_ll_i2c_master_handle_register_t *)hal_ll_i2c_get_module_state_address->hal_ll_i2c_master_handle
#define hal_ll_i2c_get_base_struct(_handle) ((hal_ll_i2c_base_handle_t *)_handle)
#define hal_ll_i2c_get_base_from_hal_handle ((hal_ll_i2c_hw_specifics_map_t *)((hal_ll_i2c_master_handle_register_t *)\
                                            (((hal_ll_i2c_master_handle_register_t *)(handle))->hal_ll_i2c_master_handle))->hal_ll_i2c_master_handle)->base
#define HAL_LL_I2C_AF_CONFIG 0xFF // TODO Esma
#define HAL_LL_I2C_ICCR1_IICRST (6)
#define HAL_LL_I2C_ICCR1_ICE (7)
#define HAL_LL_I2C_ICCR2_BBSY (7)
#define HAL_LL_I2C_ICCR2_ST (1)
#define HAL_LL_I2C_ICCR2_SP (3)
#define HAL_LL_I2C_ICSR2_TDRE (7)
#define HAL_LL_I2C_ICSR2_NACKF (4)
#define HAL_LL_I2C_ICSR2_TEND (6)
#define HAL_LL_I2C_ICSR2_STOP (3)
#define HAL_LL_I2C_ICSR2_RDRF (5)
#define HAL_LL_I2C_ICMR3_WAIT (6)
#define HAL_LL_I2C_ICMR3_ACKBT (3)
#define HAL_LL_I2C_ICMR3_ACKWP (4)
#define HAL_LL_I2C_ICFER_SCLE (6)
#define HAL_LL_I2C_ICFER_NFE (5)
#define HAL_LL_I2C_MASTER_SPEED_100K                (100000UL)
#define HAL_LL_I2C_MASTER_SPEED_400K                (400000UL)
#define HAL_LL_I2C_MASTER_SPEED_1M                  (1000000UL)

void hal_ll_i2c_master_close( handle_t *handle ) {
    low_level_handle = hal_ll_i2c_get_handle;
    hal_ll_i2c_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_i2c_get_module_state_address);

    if( NULL != low_level_handle->hal_ll_i2c_master_handle ) {
        low_level_handle->hal_ll_i2c_master_handle = NULL;
        low_level_handle->hal_drv_i2c_master_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_i2c_hw_specifics_map_local->address = 0;
        hal_ll_i2c_hw_specifics_map_local->timeout = HAL_LL_I2C_DEFAULT_PASS_COUNT;
        hal_ll_i2c_hw_specifics_map_local->speed = HAL_LL_I2C_MASTER_SPEED_100K;

        hal_ll_i2c_master_alternate_functions_set_state( hal_ll_i2c_hw_specifics_map_local, false );

        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_name = HAL_LL_PIN_NC;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_scl.pin_af = 0;
        hal_ll_i2c_hw_specifics_map_local->pins.pin_sda.pin_af = 0;
    }
}

static hal_ll_err_t hal_ll_i2c_master_write_bare_metal( hal_ll_i2c_hw_specifics_map_t *map,
                                                        uint8_t *write_data_buf,
                                                        size_t len_write_data,
                                                        hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    uint16_t time_counter = map->timeout;

    hal_ll_i2c_master_wait_for_idle( map );

    set_reg_bit( &hal_ll_hw_reg->iccr2, HAL_LL_I2C_ICCR2_ST );

    while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_TDRE ));

    write_reg( &hal_ll_hw_reg->icdrt, map->address << 1 );

    while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_TDRE ));

    if( check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_NACKF ))
        set_reg_bit( &hal_ll_hw_reg->iccr2, HAL_LL_I2C_ICCR2_SP );

    for( uint8_t i = 0; i < len_write_data; i++ ) {
        while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_TDRE ));
        write_reg( &hal_ll_hw_reg->icdrt, write_data_buf[i] );
    }

    while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_TEND ));

    clear_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_STOP );
    set_reg_bit( &hal_ll_hw_reg->iccr2, HAL_LL_I2C_ICCR2_SP );

    while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_STOP ));

    set_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_NACKF );
    clear_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_STOP );

    return HAL_LL_I2C_MASTER_SUCCESS; // TODO ESMA: add timeout and returning errors
}

static hal_ll_err_t hal_ll_i2c_master_read_bare_metal( hal_ll_i2c_hw_specifics_map_t *map,
                                                       uint8_t *read_data_buf,
                                                       size_t len_read_data,
                                                       hal_ll_i2c_master_end_mode_t mode ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    uint16_t time_counter = map->timeout;
    uint8_t dummy_read;

    hal_ll_i2c_master_wait_for_idle( map );

    set_reg_bit( &hal_ll_hw_reg->iccr2, HAL_LL_I2C_ICCR2_ST );

    while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_TDRE ));

    write_reg( &hal_ll_hw_reg->icdrt, ( map->address << 1 ) | 1 );

    while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_RDRF ));

    if( check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_NACKF )) {
        // Error
        clear_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_STOP );
        set_reg_bit( &hal_ll_hw_reg->iccr2, HAL_LL_I2C_ICCR2_SP );
        dummy_read = read_reg( &hal_ll_hw_reg->icdrr );
    } else {
        set_reg_bit( &hal_ll_hw_reg->icmr3, HAL_LL_I2C_ICMR3_WAIT );
        if( 1 != len_read_data ) {
            for( uint8_t i = 0; i < len_read_data - 2; i++ ) {
                read_data_buf[i] = read_reg( &hal_ll_hw_reg->icdrr );
                while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_RDRF ));
            }
        }

        set_reg_bit( &hal_ll_hw_reg->icmr3, HAL_LL_I2C_ICMR3_ACKWP );
        set_reg_bit( &hal_ll_hw_reg->icmr3, HAL_LL_I2C_ICMR3_ACKBT );
        clear_reg_bit( &hal_ll_hw_reg->icmr3, HAL_LL_I2C_ICMR3_ACKWP );

        read_data_buf[len_read_data - 2] = read_reg( &hal_ll_hw_reg->icdrr );

        while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_RDRF ));

        clear_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_STOP );
        set_reg_bit( &hal_ll_hw_reg->iccr2, HAL_LL_I2C_ICCR2_SP );

        read_data_buf[len_read_data - 1] = read_reg( &hal_ll_hw_reg->icdrr );
        clear_reg_bit( &hal_ll_hw_reg->icmr3, HAL_LL_I2C_ICMR3_WAIT );
    }

    while( !check_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_STOP ));

    clear_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_NACKF );
    clear_reg_bit( &hal_ll_hw_reg->icsr2, HAL_LL_I2C_ICSR2_STOP );

    return HAL_LL_I2C_MASTER_SUCCESS;
}

static void hal_ll_i2c_hw_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );

    // I2C initialization
    // Set the ICCR1.ICE bit set to 0 to set the SCLn and SDAn pins to the inactive state.
    clear_reg_bit( &hal_ll_hw_reg->iccr1, HAL_LL_I2C_ICCR1_ICE );
    // Set the ICCR1.IICRST bit to 1 to initiate IIC reset
    set_reg_bit( &hal_ll_hw_reg->iccr1, HAL_LL_I2C_ICCR1_IICRST );
    // Set the ICCR1.ICE bit to 1 to initiate internal reset.
    set_reg_bit( &hal_ll_hw_reg->iccr1, HAL_LL_I2C_ICCR1_ICE );

    clear_reg( &hal_ll_hw_reg->icser );
}

static void hal_ll_i2c_init( hal_ll_i2c_hw_specifics_map_t *map ) {
    hal_ll_i2c_base_handle_t *hal_ll_hw_reg = hal_ll_i2c_get_base_struct( map->base );
    uint32_t clock_value; // TODO Esma get source clock value

    // Enable IIC peripheral
    if( hal_ll_i2c_module_num( I2C_MODULE_0 ) == map->module_index )
        clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB9_POS );
    else if( hal_ll_i2c_module_num( I2C_MODULE_1 ) == map->module_index )
        clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB8_POS );

    hal_ll_i2c_hw_init( map );

    hal_ll_i2c_calculate_speed( map, clock_value );

    // When the required register settings are complete,
    // set the ICCR1.IICRST bit to 0 to release the IIC reset.
    clear_reg_bit( &hal_ll_hw_reg->iccr1, HAL_LL_I2C_ICCR1_IICRST );

    return;
}
